# Netology-Homeworks

Algorithms/Task 1-2/: Homework 1-2.cpp  Homework 1-2.sln  Homework 1-2.vcxproj  Homework 1-2.vcxproj.filters  Source.cpp
Algorithms/Task 2-1/: Homework 2-1.cpp  Homework 2-1.sln  Homework 2-1.vcxproj
Algorithms/Task 3/: Homework 3.cpp  Homework 3.sln  Homework 3.vcxproj
Algorithms/Task 3-3/: Homework 3-3.cpp  Homework 3-3.sln  Homework 3-3.vcxproj  Homework 3-3.vcxproj.filters
Algorithms/Task 4/: Homework 4.cpp  Homework 4.sln  Homework 4.vcxproj
Algorithms/Task 5/: Homework 5.cpp  Homework 5.sln  Homework 5.vcxproj
Algorithms/Task 6/: Homework 6.cpp  Homework 6.sln  Homework 6.vcxproj  Homework 6.vcxproj.filters
Algorithms/Task 7/: Homework 7.cpp  Homework 7.sln  Homework 7.vcxproj  Homework 7.vcxproj.filters
CPPL/Homework 1/: Homework 1.cpp  Homework 1.sln  Homework 1.vcxproj
CPPL/Homework 1-1/: Homework 1-1.cpp  Homework 1-1.sln  Homework 1-1.vcxproj  Homework 1-1.vcxproj.filters
CPPL/Homework 1-2/: Homework 1-2.cpp  Homework 1-2.sln  Homework 1-2.vcxproj  Homework 1-2.vcxproj.filters
CPPL/Homework 1-3/: Homework 1-3.cpp  Homework 1-3.sln  Homework 1-3.vcxproj  Homework 1-3.vcxproj.filters
CPPL/Homework 10/: Homework 10.cpp  Homework 10.sln  Homework 10.vcxproj  Homework 10.vcxproj.filters  task_10_1.cpp  task_10_1.h  task_10_2.cpp  task_10_2.h  task_10_3.cpp  task_10_3.h
CPPL/Homework 11/: Homework 11.cpp  (+7 more)
CPPL/Homework 4/: CMakeLists.txt  Homework 4.cpp  Homework 4_test.cpp  List.cpp  List.h
CPPM/Homework 10-2/: CMakeLists.txt  equilateral_triangle.h  parallelogram.h  rectangle.h  rhomb.cpp  rhomb.h  shape.h  square.cpp  square.h
CPPM/Homework 11-5/: CMakeLists.txt  isosceles_triangle.cpp  print_info.h  quad.h  rectangle.cpp  right_triangle.h  shape.h  startFile.cpp  triangle.h
SQL/Task 5/: CMakeLists.txt  db_editor.cpp  db_editor.h  main.cpp
(+219 files in other folders)
